# NemoClaw_MTT

./: .gitignore  README.md
01-analysis/: 01-project-overview.md  02-current-architecture.md  03-gap-analysis.md
02-multi-tenant-design/: 01-architecture-overview.md  02-tenant-isolation-strategy.md  03-auth-and-authorization.md  04-api-gateway-design.md  05-nemoclaw-decoupling-strategy.md
03-saas-platform/: 01-platform-services.md  02-billing-and-subscription.md  03-observability.md  04-deployment-topology.md  05-inference-gateway-multivendor.md
04-migration-roadmap/: 01-migration-strategy.md  02-phase1-foundation.md  03-phase2-multi-tenant.md  04-phase3-saas-launch.md
05-diagrams/: 01-current-architecture.mermaid  02-target-saas-architecture.mermaid  (+3 more)
platform/services/billing/: pyproject.toml
platform/services/billing/src/billing/: main.py
platform/services/inference-gw/: Dockerfile  pyproject.toml
platform/services/inference-gw/src/inference_gw/: config.py  main.py  router.py
platform/services/inference-gw/src/inference_gw/providers/: anthropic.py  base.py  nvidia.py  ollama.py  openai.py
platform/services/inference-gw/src/inference_gw/routes/: chat.py
platform/services/inference-gw/tests/: test_router.py
platform/services/sandbox/: Dockerfile  pyproject.toml
platform/services/sandbox/migrations/: env.py
platform/services/sandbox/migrations/versions/: 001_initial_schema.py  002_unique_sandbox_name_per_tenant.py
platform/services/sandbox/src/sandbox/: config.py  db.py  main.py
platform/services/sandbox/src/sandbox/adapters/: k8s_adapter.py  mock_adapter.py  nemoclaw_adapter.py  openshell_adapter.py
platform/services/sandbox/src/sandbox/models/: __init__.py  sandbox.py
platform/services/sandbox/src/sandbox/ports/: sandbox_backend.py
platform/services/sandbox/src/sandbox/repositories/: sandbox_repo.py
platform/services/sandbox/src/sandbox/routes/: compatibility.py  sandboxes.py
platform/services/sandbox/src/sandbox/schemas/: sandbox.py
platform/services/sandbox/src/sandbox/services/: sandbox_service.py  tenant_client.py
platform/services/sandbox/tests/: test_sandbox_acl.py  test_sandbox_service.py
(+29 files in other folders)
