[project]
name = "inference-gw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "pydantic>=2.7",
    "structlog>=24.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "shared",
    # LLM Provider SDKs（未使用的 provider 不會被 import）
    "openai>=1.30",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # httpx mock
    "ruff>=0.4",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
